--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,8 +9,7 @@
     },
     "rules": {
         "indent": [
-            "error",
-            "space"
+            "error", 2
         ],
         "linebreak-style": [
             "error",
