--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "ajv": "^6.9.1",
     "express": "^4.16.4",
+    "http-errors": "^1.7.1",
     "knex": "^0.16.3",
     "nodemon": "^1.18.10",
     "pg": "^7.8.0"
